管理员权限查看绩效柱状图数据

--- a/WebContent/crm/dynamicData_gmv_tto.html
+++ b/WebContent/crm/dynamicData_gmv_tto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>221 GMV统计</title>
+    <title>221GMV统计</title>
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
@@ -103,7 +103,7 @@
                 <div class="pull-left">
                     <div class="logo-lg">
                         <ul class="no-margin">
-                            <li class="current"><em>221 GMV统计</em></li>
+                            <li class="current"><em>221GMV统计</em></li>
                         </ul>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
             <section class="content-header">
                 <div class="box box-default">
                     <div class="box-header h4 text-light-blue">
-                        <div class="pull-left "><strong>门店GMV</strong></div>
+                        <div class="pull-left "><strong>门店221GMV</strong></div>
                         <div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
                         <div class="pull-left text-red" style="font-size:75%">
                             1.绩效GMV已去除<a  href="javascript:gotoOrderRecord(1)" >畅卡</a>统计。</br>
@@ -244,7 +244,7 @@
                 <div class="box box-default">
 
                     <div class="box-header h4 text-light-blue">
-                        <div class="pull-left "><strong>国安侠GMV</strong></div>
+                        <div class="pull-left "><strong>国安侠221GMV</strong></div>
                         <div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
                         <div class="pull-left text-red" style="font-size:75%">
                             1.绩效GMV已去除<a  href="javascript:gotoOrderRecord(1)" >畅卡</a>统计。<br>
