--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -174,6 +174,7 @@
        <ul class="nav nav-tabs nav-tabs2">
          <li class="active"><a href="javascript:void(0);" data-toggle="tab">全部GMV</a></li>
          <li><a href="javascript:void(0);" onclick="toBussiness()" data-toggle="tab">221GMV</a></li>
+         <li><a href="javascript:void(0);" onclick="doK_Mem()" data-toggle="tab">社员GMV</a></li>
        </ul>
       <div class="tab-content no-padding">
       <div class="tab-pane active" id="tab_1">
@@ -2741,6 +2742,17 @@ Date.prototype.format = function() {
 		  }
  		window.location.href=url;
   }
+    function doK_Mem(){
+        var url = "";
+        if(target==0){
+            url = "index_K_member.html?t="+encode64(target)+"&c=&cn=&e=";
+        }else if(target==1){
+            url = "index_K_member.html?t="+encode64(1)+"&s=&c="+ encode64(cityId)+"&cn="+encode64(cityName)+"&e=";
+        }else{
+            url = "index_K_member.html?t="+encode64(0);
+        }
+        window.open(url,"index_K_member");
+    }
 </script>
 
 </body>
