--- a/WebContent/crm/index_K_221.html
+++ b/WebContent/crm/index_K_221.html
@@ -174,6 +174,7 @@
        <ul class="nav nav-tabs nav-tabs2">
          <li><a href="javascript:void(0);" onclick="toIndex()" data-toggle="tab">全部GMV</a></li>
          <li class="active"><a href="javascript:void(0);" data-toggle="tab">221GMV</a></li>
+         <li><a href="javascript:void(0);" onclick="doK_Mem()" data-toggle="tab">社员GMV</a></li>
        </ul>
       <div class="tab-content no-padding">
       <div class="tab-pane active" id="tab_1">
