修改明查添加表格th

--- a/WebContent/data_access/observe_paramter_add.html
+++ b/WebContent/data_access/observe_paramter_add.html
@@ -331,7 +331,7 @@
 	  </tr>
 	  <tr>
 	    <th id="a5_1" class="trbg1">A5.1无迎宾语</th>
-	    <th><input class="form-control" type="text"></th>
+	    <td><input class="form-control" type="text"></td>
 	    <td><input class="form-control" type="text"></td>
 	    <td><input class="form-control" type="text"></td>
 	  </tr>
