--- a/WebContent/data_access/observe_parameter_view.html
+++ b/WebContent/data_access/observe_parameter_view.html
@@ -259,11 +259,10 @@ $pmspage.opArr = [ editObj];
          if(result.status=='success'){
              window.location.href=result.data;
          }else if(result.status=='null'){
-             crm_alert(0,"请先确认是否有符合条件的数据，重新请求！");
-
+             $$.showMessage("系统信息",result.message);
              return;
          }else{
-             crm_alert(5,"请稍后重新请求！");
+             $$.showMessage("系统信息","请稍后重新请求！");
          }
      },false);
 
