添加大客户页

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -161,11 +161,13 @@
         <div class="nav-tabs-custom no-margin">
         	<div class="pull-right text-red" style="padding-left:15px;font-size:75%;float: right">统计数据每10分钟更新一次</div>
 			<div class="pull-right" style="padding: 0 25px;float: right">
-				<a href="#tab_3" class="btn btn-block btn-warning" data-toggle="tab" aria-expanded="false">大客户社员查询</a>
+				<a href="big_member_view.html" class="btn btn-block btn-warning" data-toggle="tab" aria-expanded="false">大客户社员查询</a>
 			</div>
           <ul class="nav nav-tabs">
 		              <li class="active" id="tab_1_avtive"><a href="#tab_1" data-toggle="tab" aria-expanded="true">门店单位统计</a></li>
 		              <li class="" id="tab_2_avtive"><a href="#tab_2" data-toggle="tab" aria-expanded="false">城市单位统计</a></li>
+			  		  <li class="" id="tab_3_avtive"><a href="#tab_3" data-toggle="tab" aria-expanded="false">试用社员统计</a></li>
+
 		  </ul>
 		  <div class="tab-content">
 			  <div class="tab-pane active" id="tab_1">
